added nav menu for bonous purpose and added banner section in assainment

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <header>
+        <nav>
+            <h3 class="nav_title"><span class="logo">FLOWER</span>SHOP</h3>
+            <ul>
+                <li><a href="">Catagory</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+        </nav>
+
+        <div class="mainbanner">
+            <div class="banner">
+                <h2 class="banner_h2">Let's make<br>beautiful flowers a<br>part of your life.</h2>
+                <p class="banner_p">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="banner_btn">Shop now</button>
+            </div>
+            <img class="banner_pic" src="./Flower Asset/pngwing 10.png" alt="">
+        </div>
         
     </header>
 
