--- a/index.html
+++ b/index.html
@@ -21,15 +21,69 @@
             <div class="banner">
                 <h2 class="banner_h2">Let's make<br>beautiful flowers a<br>part of your life.</h2>
                 <p class="banner_p">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                <button class="banner_btn">Shop now</button>
+                <button class="btn">Shop now</button>
             </div>
-            <img class="banner_pic" src="./Flower Asset/pngwing 10.png" alt="">
+            <img class="banner_pic" src="./images/pngwing 10.png" alt="">
         </div>
-        
     </header>
 
     <main>
+               <!-- section_1  -->
+        <section class="section_1">
+            <div class="section_title">
+                <h3 class="section_1_h3">Our Featured Flowers</h3>
+                <p class="section_1_p">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+            </div>
+        </section>
 
+              <!-- section_2  -->
+
+        <section class="section_2">
+            <div class="folower123">
+                <div class="flower1">
+                    <img class="flower" src="./images/pngwing 6.png" alt="">
+                </div>
+                <div class="flower2">
+                    <img class="flower" src="./images/pngwing 5.png" alt="">
+                </div>
+                <div class="flower3">
+                    <img class="flower" src="./images/pngwing 7.png" alt="">
+                </div>
+            </div>
+        </section>
+
+             <!-- section_3  -->
+
+
+        <section class="section_3">
+            <div class="services">
+                <div class="servicecontainer">
+                    <img src="./images/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="servicecontainer">
+                    <img src="./images/Group 58.png" alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="servicecontainer">
+                    <img src="./images/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
+            </div>
+        </section>
+
+             <!-- section_4  -->
+
+             <section class="section_4">
+                <div class="hot_deal">
+                    <div class="text">
+                        <h3 class="hot_deal_h3">Hot Deal ! Sale Up To 25% Off</h3>
+                        <p class="hot_deal_p">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                        <button class="btn">Sign Up</button>
+                    </div>
+                </div>
+                <img src="./images/pngwing 8.png" alt="">
+             </section>
     </main>
 
     <footer>
