added all the section

--- a/index.html
+++ b/index.html
@@ -82,12 +82,44 @@
                         <button class="btn">Sign Up</button>
                     </div>
                 </div>
-                <img src="./images/pngwing 8.png" alt="">
+                <img class="hot_deal_img" src="./images/pngwing 8.png" alt="">
              </section>
+
+         <!-- section_5      -->
+         <section>
+            <div class="section_5">
+                <div class="section_title">
+                    <h3 class="section_1_h3">Instagram</h3>
+                    <p class="section_1_p">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                </div>
+                <div class="section_5_img">
+                    <img class="img_1" src="./images/Flower 01.png" alt="">
+                    <img class="img_1" src="./images/Rectangle 4.png" alt="">
+                    <img class="img_1" src="./images/Rectangle 5.png" alt="">
+                    <img class="img_1" src="./images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+         </section>
+
+         <!-- section_6  -->
+
+            <section class="section_6">
+                <div class="section_title">
+                    <h3 class="section_1_h3">Get The Latest Deals</h3>
+                    <p class="section_1_p">$30 coupon for first shopping</p>
+                    <input class="your_name" type="text" class="name" placeholder="Enter your email here....">
+                    <button class="btn">Subscribe</button>
+                </div>
+            </section>
+
     </main>
 
     <footer>
-
+        <div class="section_title">
+            <h3 class="nav_title"><span class="logo">FLOWER</span>SHOP</h3>
+            <p class="footer_p">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+            <p class="footer_p1">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
     </footer>
 
     
