--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
         <section class="section_3">
             <div class="services">
                 <div class="servicecontainer">
-                    <img src="./images/Group 57.png" alt="">
+                    <img class="service_img" src="./images/Group 57.png" alt="">
                     <p>Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="servicecontainer">
-                    <img src="./images/Group 58.png" alt="">
+                    <img class="service_img" src="./images/Group 58.png" alt="">
                     <p>Fresh Flowers. Local Growers.</p>
                 </div>
                 <div class="servicecontainer">
-                    <img src="./images/Group 59.png" alt="">
+                    <img class="service_img" src="./images/Group 59.png" alt="">
                     <p>24/7 Free Support.</p>
                 </div>
             </div>
@@ -77,7 +77,7 @@
              <section class="section_4">
                 <div class="hot_deal">
                     <div class="text">
-                        <h3 class="hot_deal_h3">Hot Deal ! Sale Up To 25% Off</h3>
+                        <h3 class="hot_deal_h3">Hot Deal ! Sale Up To 25% <span class="off_red">Off</span></h3>
                         <p class="hot_deal_p">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
                         <button class="btn">Sign Up</button>
                     </div>
