--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                     <img class="flower" src="./images/pngwing 7.png" alt="">
                 </div>
             </div>
+            <div class="folower123">
+                <a href="">Pink Flower Tree</a>
+                <a href="">Pink Flower Tree</a>
+                <a href="">Pink Flower Tree</a>
+            </div>
         </section>
 
              <!-- section_3  -->
@@ -79,7 +84,7 @@
                     <div class="text">
                         <h3 class="hot_deal_h3">Hot Deal ! Sale Up To 25% <span class="off_red">Off</span></h3>
                         <p class="hot_deal_p">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
-                        <button class="btn">Sign Up</button>
+                        <button class="hot_deal_btn">Sign Up</button>
                     </div>
                 </div>
                 <img class="hot_deal_img" src="./images/pngwing 8.png" alt="">
