added final project

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="section_title">
                     <h3 class="section_1_h3">Get The Latest Deals</h3>
                     <p class="section_1_p">$30 coupon for first shopping</p>
-                    <input class="your_name" type="text" class="name" placeholder="Enter your email here....">
+                    <input type="text" class="email" placeholder="Enter your email here....">
                     <button class="btn">Subscribe</button>
                 </div>
             </section>
